--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -8,8 +8,11 @@
     <div>
         {% for room in rooms %}
             <div>
-                <h5>{{room.id}} -- <a href="/room/{{room.id}}">{{room.name}}</a></h5>
+                <span>@{{room.host.username}}</span>
+                <h5>{{room.id}} -- <a href="{% url 'room' room.id%}">{{room.name}}</a></h5>
             </div>
+            <small>{{room.topic.name}}<small>
+            <hr>
         {% endfor %}
     </div>
 </div>
