--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -11,7 +11,7 @@
                 <span>@{{room.host.username}}</span>
                 <h5>{{room.id}} -- <a href="{% url 'room' room.id%}">{{room.name}}</a></h5>
             </div>
-            <small>{{room.topic.name}}<small>
+            <small>{{room.topic.name}}</small>
             <hr>
         {% endfor %}
     </div>
