--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -16,9 +16,20 @@
     <div>
         <h3>Browse Topics</h3>
         <hr>
+
+        <div>
+            <a href="{% url 'home' %}">All</a>
+        </div>
+
+        {% for topic in topics%}
+            <div>
+                <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+            </div>
+        {% endfor %}
     </div>
 
     <div>
+        <h5>{{room_count}} rooms available</h5>
         <a href="{% url 'create-room' %}">Create Room</a>
    
         <div>
