--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,4 +4,8 @@
 
 </a>
 
+<form method="GET" action="{% url 'home' %}">
+    <input type="text" name="q" placeholder="Search Rooms..." />
+</form>
+
 <hr>
