--- a/templates/main.html
+++ b/templates/main.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv='X-UA-Compatible' content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
-    <title>StudyBud</title>
-</head>
+  <body>
 
-<body>
     {% include 'navbar.html' %}
 
     {% if messages %}
@@ -28,6 +28,10 @@
 
 
     {% endblock %}
-    
-</body>
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
+
+
+
+
