--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -78,7 +78,7 @@
             rerum consectetur, voluptatem repudiandae eum ea porro cupiditate provident nulla, deserunt, ab ipsum
             corporis laboriosam deleniti molestias?
           </div> -->
-          <span class="room__topics">JavaScript</span>
+          <span class="room__topics">{{room.topic.name}}</span>
         </div>
         <div class="room__conversation">
           <div class="threads scroll">
