--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -17,7 +17,6 @@
           </a>
           <h3>Study Room</h3>
         </div>
-
         {% if room.host == request.user %}
         <div class="room__topRight">
           <a href="{% url 'update-room' room.id %}">
@@ -45,7 +44,7 @@
                 </g>
               </g>
             </svg>
-          </a>
+          </a>  
           <a href="{% url 'delete-room' room.id %}">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>remove</title>
@@ -118,7 +117,10 @@
         </div>
       </div>
       <div class="room__message">
-        <form action="#"><input name="" placeholder="Write your message here..." /></form>
+        <form action="" method="POST">
+          {% csrf_token %}
+          <input name="body" placeholder="Write your message here..." />
+        </form>
       </div>
     </div>
     <!-- Room End -->
